# advent-of-code

./: Cargo.toml
day-1/src/: main.rs
day-2/src/: main.rs
day-3/src/: main.rs
day-4/src/: main.rs
